--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -8,9 +8,13 @@
   "main_section1": {
     "sub_title": "가맹점 매출 통합 조회",
     "title_strong": "프랜차이즈 본사",
-    "title": "만을 위한 플랫폼 데이터 통합 시스템",
+    "title": "만을 위한\n플랫폼 데이터 통합 시스템",
     "descript": "플랫폼의 매출 데이터를 수집하고 집계해\n다양한 차트와 그래프로 통합된 통계를 제공합니다.",
-    "button": "문의하기"
+    "button": "문의하기",
+    "mobile": {
+      "title_strong": "프랜차이즈 본사",
+      "title": "만을\n위한 플랫폼 데이터\n통합 시스템"
+    }
   },
 
   "main_section2": {
@@ -67,7 +71,7 @@
     "company": "리드플래닛",
     "ceo": "대표이사 박종현",
     "address": "서울특별시 강남구 영동대로 511, 2204호(삼성동, 트레이드타워)",
-    "phone": "전화번호 : 070-4099-7218~9",
+    "phone": "전화번호 : 070-4141-7216~7",
     "business_number": "사업자번호 : 209-88-02511",
     "copyright": "Copyright ⓒ 2017. LeadPlanet. Ltd. All Rights Reserved"
   }
