feat: 개인정보취급방침 팝업 추가

--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -74,5 +74,6 @@
     "phone": "전화번호 : 070-4141-7216~7",
     "business_number": "사업자번호 : 209-88-02511",
     "copyright": "Copyright ⓒ 2017. LeadPlanet. Ltd. All Rights Reserved"
-  }
+  },
+  "detail_view": "자세히"
 }
