--- a/public/locales/en/popup.json
+++ b/public/locales/en/popup.json
@@ -1,7 +1,8 @@
 {
   "default": {
     "contact_us_title": "문의하기",
-    "cost_title": "월 사용료"
+    "cost_title": "월 사용료",
+    "coming_soon": "준비중입니다."
   },
   "contact_us": {
     "kakao": "카카오톡 상담",
@@ -9,12 +10,12 @@
     "name": "이름",
     "email": "이메일",
     "phone_number": "연락처",
-    "inquiry1": "문의사항",
-    "inquiry2": "프로그램 사용 문의",
-    "inquiry3": "기능문의",
-    "inquiry4": "미팅요청",
-    "inquiry5": "요금문의",
-    "inquiry6": "기타",
+    "inquiry_title": "문의사항",
+    "inquiry1": "프로그램 사용 문의",
+    "inquiry2": "기능문의",
+    "inquiry3": "미팅요청",
+    "inquiry4": "요금문의",
+    "inquiry5": "기타",
     "message": "내용",
     "agree1": "개인정보 수집 동의 (필수)",
     "agree2": "마케팅 정보 수신 동의 (선택)",
