--- a/public/locales/ko/popup.json
+++ b/public/locales/ko/popup.json
@@ -30,7 +30,8 @@
       "message": "내용을 입력해주세요.",
       "agree1": "개인정보 수집 동의를 체크해주세요.",
       "success": "문의가 접수되었습니다."
-    }
+    },
+    "essential": "* 는 필수 입력 항목 입니다."
   },
   "cost": {
     "title1": "가맹점 200개점 이하",
