feat: 일매출 추가, 검색 수정 중, 달력 색상 변경

--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -92,8 +92,9 @@
       "menu1": "회사관리",
       "menu2": "사용자관리",
       "menu3": "가맹점맵핑",
-      "menu4": "매출관리",
-      "menu5": "고객센터"
+      "menu4": "일매출관리",
+      "menu5": "월매출관리",
+      "menu6": "고객센터"
     }
   },
   "search": "검색"
