feat: user 브랜드, 일매출, 월매출 추가

--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -86,7 +86,8 @@
     "user_menu": {
       "menu1": "브랜드관리",
       "menu2": "가맹점관리",
-      "menu3": "매출관리"
+      "menu3": "일매출관리",
+      "menu4": "월매출관리"
     },
     "admin_menu": {
       "menu1": "회사관리",
