--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -92,10 +92,12 @@
     "admin_menu": {
       "menu1": "회사관리",
       "menu2": "사용자관리",
-      "menu3": "가맹점맵핑",
-      "menu4": "일매출관리",
-      "menu5": "월매출관리",
-      "menu6": "고객센터"
+      "menu3": "가맹점관리",
+      "menu4": "가맹점계정관리",
+      "menu5": "가맹점맵핑관리",
+      "menu6": "일매출관리",
+      "menu7": "월매출관리",
+      "menu8": "고객센터"
     }
   },
   "search": "검색"
