feat: user에 가맹점관리 추가, 엑셀 업로드 다운로드 로직 수정

--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -86,8 +86,10 @@
     "user_menu": {
       "menu1": "브랜드관리",
       "menu2": "가맹점관리",
-      "menu3": "일매출관리",
-      "menu4": "월매출관리"
+      "menu3": "가맹점계정관리",
+      "menu4": "가맹점맵핑관리",
+      "menu5": "일매출관리",
+      "menu6": "월매출관리"
     },
     "admin_menu": {
       "menu1": "회사관리",
