결제페이지 추가

--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -89,7 +89,8 @@
       "menu3": "가맹점계정관리",
       "menu4": "가맹점맵핑관리",
       "menu5": "일매출관리",
-      "menu6": "월매출관리"
+      "menu6": "월매출관리",
+      "menu7": "결제관리"
     },
     "admin_menu": {
       "menu1": "회사관리",
