admin 매출분석 페이지 추가

--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -100,7 +100,8 @@
       "menu5": "가맹점맵핑관리",
       "menu6": "일매출관리",
       "menu7": "월매출관리",
-      "menu8": "고객센터"
+      "menu8": "고객센터",
+      "menu9": "매출분석"
     }
   },
   "search": "검색"
