feat: 메뉴 구조, 아이콘 변경

--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -83,23 +83,17 @@
     "name_text": "님 로그인 중입니다.",
     "help": "도움말",
     "logout": "로그아웃",
-    "user_menu": {
-      "menu1": "브랜드관리",
-      "menu2": "가맹점관리",
-      "menu3": "가맹점계정관리",
-      "menu4": "가맹점맵핑관리",
-      "menu5": "일매출관리",
-      "menu6": "월매출관리"
-    },
-    "admin_menu": {
-      "menu1": "회사관리",
-      "menu2": "사용자관리",
-      "menu3": "가맹점관리",
-      "menu4": "가맹점계정관리",
-      "menu5": "가맹점맵핑관리",
-      "menu6": "일매출관리",
-      "menu7": "월매출관리",
-      "menu8": "고객센터"
+    "nav_menu": {
+      "company": "회사관리",
+      "user": "사용자관리",
+      "brand": "브랜드관리",
+      "store": "가맹점관리",
+      "store_account": "가맹점계정관리",
+      "store_mapping": "가맹점맵핑",
+      "sales_day": "일매출관리",
+      "sales_month": "월매출관리",
+      "sales_region": "지역매출관리",
+      "sales_analyze": "매출분석"
     }
   },
   "search": "검색"
