--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -93,8 +93,9 @@
       "sales_day": "일매출관리",
       "sales_month": "월매출관리",
       "sales_region": "지역매출관리",
-      "sales_analyze": "매출분석",
-      "sales_channel": "채널매출"
+      "sales_channel": "채널매출",
+      "sales_analyze": "매출분석(전체)",
+      "sales_analyze_select": "매출분석(선택)"
     }
   },
   "search": "검색"
